--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "^10.0.1",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.292.0",
     "next": "14.0.0",
     "postcss": "^8",
